--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,16 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+
+  flex-direction: row;
+  padding: 10px;
+  gap: 16px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
 }
 
 .icon {
@@ -33,6 +43,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -50,6 +62,17 @@ body {
   padding: 0;
 }
 
+.header {
+  font-weight: bold;
+  font-size: 20px;
+  margin-bottom: 10px;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+
 button {
   cursor: pointer;
   padding: 8px 16px;
@@ -60,6 +83,8 @@ button.continue {
   background: royalblue;
   border: 1px solid royalblue;
   color: white;
+
+  margin-top: 10px;
 }
 
 button.cancel {
