--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,9 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -24,3 +27,91 @@ input {
   padding: 8px 24px;
   width: 400px;
 }
+
+/* My solution */
+
+.header {
+  display: flex;
+  justify-content: space-between;
+
+  margin: 0;
+  padding: 10px;
+}
+
+/* Remove bullet points from list elements */
+.left-links, .right-links {
+  list-style-type: none;
+}
+
+/* Remove underlines from header links */
+a {
+  text-decoration: none;
+  color: gray;
+}
+
+a:hover {
+  color: black;
+}
+
+.left-links {
+  display: flex;
+
+  margin: 0;
+  padding: 0;
+  gap: 10px;
+}
+
+.right-links {
+  display: flex;
+
+  margin: 0;
+  padding: 0;
+  gap: 10px;
+}
+
+.content {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-basis: 100%;
+}
+
+.content-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
+
+.footer {
+  display: flex;
+  flex-shrink: 0;
+  justify-content: space-between;
+  
+  padding: 10px;
+
+  background-color: #eeeeee;
+}
+
+.footer .left-links {
+  display: flex;
+
+  margin: 0;
+  padding: 0;
+  gap: 10px;
+}
+
+
+
+
+
+
+
+
